	-Added Arrow.cs: Creates an object to hold the arrow texture and the rectangle.
	-Added another gamestate that controls the combat phases, and does the respective job
	-Cleaned up unused variables
	
//James Friedenberg + Juri Kiin 4:50 PM 4/6/16
	-Fixed blocking mechanic so random arrows spawn and move across the screen during combat
	-Loaded in new protag/antag sprites

//Dustin Knowlton 5:05PM 4/6/16
	-Collision functions properly!
	-Enemy is too large
	-Combat cycling atk->def

//James Friedenberg + Juri Kiin + Austin Ford 11:57 AM 4/11/2016
	-Fixed blocking hitbox 
	-Fixed states and health reduction so blocking mechanic is functional
	
//Dustin Knowlton 4:45PM 4/13/16
	-added Levelgen method
	-level switching should work properly
	-simply set tunnel (rectangle object) to wherever the player should go to head to the next level, intersection will gen the next.

//James Friedenberg 5:46PM 4/13/2016
	-Added Loading screen and Game Over screen and took out some debugging code

//Dustin Knowlton 6:01PM 4/13/16
	-Dialogue method added, very unfinished.

//Juri Kiin 10:52 AM 4/18/16
	- Added the combat code for attacking.
	- Subtracts the enemies health, and displays both the enemy and player health.
//James Friedenberg 6:15pm 4/18/2016
	-cleaned up the UI and have the health potions properly decrementing. Need to figure out how to make them properly restore player HP

//Dustin Knowlton 7:52 PM 4/8/16
	-Blocking sequence functions as intended, except for "hitbox" issues.
	-X coordinates set as limits for hitbox seem to somehow disagree with what is displayed, including the hitbox graphic. 
	- Map Collisions

//Juri Kiin 9:31 PM 4/20/16

	- Finished combat mechanics.
	- Fixed Enemy Collision
	- Added an attack speed factor in the Enemy Creation App.
	- Added enemies into test map

// Juri Kiin 9:48 AM 5/2/16
	- Added a class system into the game for the player to choose before they start the game.
	- This affects the stats that they start out with
