@@ -1,0 +1,3 @@
+THIS IS A DIALOGUE SAMPLE SAMPLE TEXT MEMES LMAO
+_
+_
